--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,6 +33,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '16.x'
+        registry-url: 'https://registry.npmjs.org'
     - name: Install latest npm
       run: npm install -g npm@latest
     - name: Check npm version
