--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,7 +32,7 @@ jobs:
     - name: Install Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16.x'
+        node-version: 16.x
         registry-url: 'https://registry.npmjs.org'
     - name: Install latest npm
       run: npm install -g npm@latest
