--- a/package.json
+++ b/package.json
@@ -1,19 +1,46 @@
 {
   "name": "vue3-map-ui",
   "version": "0.0.4",
-  "description": "Vue 3 map component library based on leaflet",
-  "files": [
-    "dist"
+  "description": "Map component library based on leaflet for Vue 3",
+  "author": "Nikolay Naumenkov <nikolas.it.web@gmail.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/nikolaynau/vue3-map-ui#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nikolaynau/vue3-map-ui.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nikolaynau/vue3-map-ui/issues"
+  },
+  "keywords": [
+    "vue3",
+    "map",
+    "ui",
+    "leaflet"
   ],
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
-  "types": "./dist/index.d.ts",
+  "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.es.js",
       "require": "./dist/index.umd.js"
     }
+  },
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "./dist/*"
+      ]
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "lint-staged": {
+    "*.{js,ts,vue,css}": "prettier --write"
   },
   "scripts": {
     "watch": "vite build --watch",
@@ -65,24 +92,5 @@
     "vitest": "^0.28.4",
     "vue-docgen-cli": "^4.57.1",
     "vue-tsc": "^1.0.24"
-  },
-  "lint-staged": {
-    "*.{js,ts,vue,css}": "prettier --write"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nikolaynau/vue3-map-ui.git"
-  },
-  "keywords": [
-    "vue3",
-    "map",
-    "ui",
-    "leaflet"
-  ],
-  "author": "Nikolay Naumenkov <nikolas.it.web@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/nikolaynau/vue3-map-ui/issues"
-  },
-  "homepage": "https://github.com/nikolaynau/vue3-map-ui#readme"
+  }
 }
