--- a/package.json
+++ b/package.json
@@ -41,16 +41,17 @@
   "scripts": {
     "watch": "vite build --watch",
     "build": "run-p type-check build-only",
-    "test": "npm run test:unit",
-    "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "build-styles": "postcss src/assets/css/normalize.css --base src/assets/css --dir dist -u \"postcss-import\" tailwindcss autoprefixer cssnano --no-map",
     "clear-docs": "rimraf ./dist/docs/components",
     "build-docs": "npm run clear-docs && vue-docgen",
-    "build-all": "run-s build build-docs global-dts",
+    "build-all": "run-s build build-styles build-docs global-dts",
     "global-dts": "esno scripts/gen-global.ts",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write \"src/**/*.{js,ts,vue,css}\"",
+    "test": "npm run test:unit",
+    "test:unit": "vitest --environment jsdom --root src/",
     "postversion": "npm run push",
     "push": "git push origin master --tags",
     "husky": "husky install"
@@ -73,6 +74,7 @@
     "@vue/test-utils": "^2.2.10",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
     "eslint": "^8.33.0",
     "eslint-plugin-vue": "^9.9.0",
     "esno": "^0.16.3",
@@ -81,6 +83,7 @@
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
