--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@commitlint/config-angular": "^17.4.2",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/jsdom": "^21.1.0",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.19",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-c8": "^0.28.4",
