--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write \"src/**/*.{js,ts,vue,css}\"",
     "test": "npm run test:unit",
-    "test:unit": "vitest --environment jsdom --root src/",
+    "test:unit": "vitest",
     "postversion": "npm run push",
     "push": "git push origin master --tags",
     "husky": "husky install"
@@ -59,6 +59,9 @@
   "peerDependencies": {
     "leaflet": "^1.9.3",
     "vue": "^3.2.47"
+  },
+  "dependencies": {
+    "@vueuse/shared": "^9.12.0"
   },
   "devDependencies": {
     "@babel/types": "^7.20.7",
