--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "vue": "^3.2.47"
   },
   "dependencies": {
+    "@vueuse/core": "^9.12.0",
     "@vueuse/shared": "^9.12.0"
   },
   "devDependencies": {
