--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "build-styles": "postcss src/assets/css/normalize.css --base src/assets/css --dir dist -u \"postcss-import\" tailwindcss autoprefixer cssnano --no-map",
-    "clear-docs": "rimraf ./dist/docs/components",
-    "build-docs": "npm run clear-docs && vue-docgen",
-    "build-all": "run-s build build-styles build-docs global-dts",
+    "build-all": "run-s build build-styles global-dts",
     "global-dts": "esno scripts/gen-global.ts",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write \"src/**/*.{js,ts,vue,css}\"",
@@ -95,9 +93,7 @@
     "tailwindcss": "^3.2.4",
     "typescript": "~4.9.5",
     "vite": "^4.1.1",
-    "vite-plugin-dts": "^1.7.2",
     "vitest": "^0.28.4",
-    "vue-docgen-cli": "^4.57.1",
     "vue-tsc": "^1.0.24"
   }
 }
