--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
   },
   "dependencies": {
     "@vueuse/core": "^9.12.0",
-    "@vueuse/shared": "^9.12.0"
+    "@vueuse/shared": "^9.12.0",
+    "object.omit": "^3.0.0",
+    "object.pick": "^1.3.0"
   },
   "devDependencies": {
     "@babel/types": "^7.20.7",
@@ -72,6 +74,8 @@
     "@types/jsdom": "^21.1.0",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.19",
+    "@types/object.omit": "^3.0.0",
+    "@types/object.pick": "^1.3.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitest/coverage-c8": "^0.28.4",
     "@vue/eslint-config-prettier": "^7.0.0",
