--- a/package.json
+++ b/package.json
@@ -57,14 +57,15 @@
     "husky": "husky install"
   },
   "peerDependencies": {
-    "leaflet": "^1.9.3",
-    "vue": "^3.2.47"
+    "leaflet": ">=1.9.0",
+    "vue": ">=3.0.0"
   },
   "dependencies": {
     "@vueuse/core": "^9.12.0",
     "@vueuse/shared": "^9.12.0",
     "object.omit": "^3.0.0",
-    "object.pick": "^1.3.0"
+    "object.pick": "^1.3.0",
+    "vue-use-leaflet": "^0.0.3"
   },
   "devDependencies": {
     "@babel/types": "^7.20.7",
@@ -89,6 +90,7 @@
     "esno": "^0.16.3",
     "husky": "^8.0.3",
     "jsdom": "^21.1.0",
+    "leaflet": "^1.9.3",
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
@@ -99,6 +101,7 @@
     "typescript": "~4.9.5",
     "vite": "^4.1.1",
     "vitest": "^0.28.4",
+    "vue": "^3.2.47",
     "vue-tsc": "^1.0.24"
   }
 }
