--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "vue3-map-ui",
+  "name": "vue-map-ui",
   "version": "0.0.4",
   "description": "Map component library based on leaflet for Vue 3",
   "author": "Nikolay Naumenkov <nikolas.it.web@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/nikolaynau/vue3-map-ui#readme",
+  "homepage": "https://github.com/nikolaynau/vue-map-ui#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nikolaynau/vue3-map-ui.git"
+    "url": "git+https://github.com/nikolaynau/vue-map-ui.git"
   },
   "bugs": {
-    "url": "https://github.com/nikolaynau/vue3-map-ui/issues"
+    "url": "https://github.com/nikolaynau/vue-map-ui/issues"
   },
   "keywords": [
     "map ui",
