--- a/package.json
+++ b/package.json
@@ -51,9 +51,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write \"src/**/*.{js,ts,vue,css}\"",
     "test": "vitest",
-    "test:2": "vue-demi-switch 2.7 vue2 && vitest run --silent",
-    "test:3": "vue-demi-switch 3 && vitest run",
-    "test:all": "npm run test:3 && npm run test:2 && vue-demi-switch 3",
+    "test:run": "vitest run",
     "test:cov": "vitest run --coverage",
     "postversion": "npm run push",
     "push": "git push origin master --tags",
@@ -61,15 +59,14 @@
   },
   "peerDependencies": {
     "leaflet": ">=1.9.0",
-    "vue": "^2.0.0 || >=3.0.0"
+    "vue": ">=3.0.0"
   },
   "dependencies": {
     "@vueuse/core": "^9.12.0",
     "@vueuse/shared": "^9.12.0",
     "object.omit": "^3.0.0",
     "object.pick": "^1.3.0",
-    "vue-use-leaflet": "^0.0.3",
-    "vue-demi": "latest"
+    "vue-use-leaflet": "^0.0.5"
   },
   "devDependencies": {
     "@babel/types": "^7.20.7",
@@ -106,7 +103,6 @@
     "vite": "^4.1.1",
     "vitest": "^0.28.4",
     "vue": "^3.2.47",
-    "vue-tsc": "^1.0.24",
-    "vue2": "npm:vue@^2.7.10"
+    "vue-tsc": "^1.0.24"
   }
 }
