--- a/tsconfig.dts.json
+++ b/tsconfig.dts.json
@@ -1,5 +1,6 @@
 {
   "extends": "./tsconfig.app.json",
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
     "composite": false,
     "outDir": "./dist/types",
