--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@vueuse/shared": "^9.13.0",
     "object.omit": "^3.0.0",
     "object.pick": "^1.3.0",
+    "uuid": "^9.0.0",
     "vue-use-leaflet": "^0.0.9"
   },
   "devDependencies": {
@@ -82,6 +83,7 @@
     "@types/node": "^18.15.5",
     "@types/object.omit": "^3.0.0",
     "@types/object.pick": "^1.3.2",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitest/coverage-c8": "^0.29.7",
     "@vue/eslint-config-prettier": "^7.1.0",
