chore: update packages

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "build-styles": "postcss src/assets/css/normalize.css --base src/assets/css --dir dist -u \"postcss-import\" tailwindcss autoprefixer cssnano --no-map",
     "build-global-dts": "esno scripts/gen-global.ts",
     "build-attrs-dts": "esno scripts/gen-attrs.ts",
-    "build-all": "run-s build build-styles build-attrs-dts build-global-dts",
+    "build-meta": "esno scripts/gen-meta.ts",
+    "build-all": "run-s build build-styles build-attrs-dts build-global-dts build-meta",
     "playground": "vite playground",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write \"src/**/*.{js,ts,vue,css}\"",
@@ -66,50 +67,50 @@
     "vue": ">=3.0.0"
   },
   "dependencies": {
-    "@vueuse/core": "^10.1.0",
-    "@vueuse/shared": "^10.1.0",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/shared": "^10.1.2",
     "object.omit": "^3.0.0",
     "object.pick": "^1.3.0",
     "uuid": "^9.0.0",
-    "vue-use-leaflet": "^0.0.10"
+    "vue-use-leaflet": "^0.1.0"
   },
   "devDependencies": {
-    "@babel/types": "^7.21.4",
-    "@commitlint/cli": "^17.6.1",
-    "@commitlint/config-angular": "^17.6.1",
-    "@rushstack/eslint-patch": "^1.2.0",
+    "@babel/types": "^7.22.4",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-angular": "^17.6.5",
+    "@rushstack/eslint-patch": "^1.3.0",
     "@types/jsdom": "^21.1.1",
     "@types/leaflet": "^1.9.3",
-    "@types/node": "^18.16.0",
+    "@types/node": "^20.2.5",
     "@types/object.omit": "^3.0.0",
     "@types/object.pick": "^1.3.2",
     "@types/uuid": "^9.0.1",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "@vitest/coverage-c8": "^0.30.1",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-c8": "^0.31.4",
     "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
-    "@vue/tsconfig": "^0.3.1",
+    "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.14",
-    "cssnano": "^6.0.0",
-    "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.11.0",
+    "cssnano": "^6.0.1",
+    "eslint": "^8.42.0",
+    "eslint-plugin-vue": "^9.14.1",
     "esno": "^0.16.3",
     "husky": "^8.0.3",
-    "jsdom": "^21.1.1",
-    "leaflet": "^1.9.3",
-    "lint-staged": "^13.2.1",
+    "jsdom": "^22.1.0",
+    "leaflet": "^1.9.4",
+    "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.1",
-    "typescript": "~5.0.4",
-    "vite": "^4.3.1",
-    "vitest": "^0.30.1",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "vue-tsc": "^1.4.4"
+    "tailwindcss": "^3.3.2",
+    "typescript": "~5.1.3",
+    "vite": "^4.3.9",
+    "vitest": "^0.31.4",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2",
+    "vue-tsc": "^1.6.5"
   }
 }
