--- a/package.json
+++ b/package.json
@@ -80,6 +80,9 @@
     "@babel/types": "^7.22.5",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-angular": "^17.6.7",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/jsdom": "^21.1.1",
     "@types/leaflet": "^1.9.3",
