--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "vue": ">=3.0.0"
   },
   "dependencies": {
-    "@vueuse/core": "^10.2.1",
-    "@vueuse/shared": "^10.2.1",
+    "@vueuse/core": "^10.3.0",
+    "@vueuse/shared": "^10.3.0",
     "object.omit": "^3.0.0",
     "object.pick": "^1.3.0",
     "uuid": "^9.0.0",
@@ -86,36 +86,36 @@
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/jsdom": "^21.1.1",
     "@types/leaflet": "^1.9.3",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.5",
     "@types/object.omit": "^3.0.0",
     "@types/object.pick": "^1.3.2",
     "@types/uuid": "^9.0.2",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^0.34.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.4.0",
+    "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
-    "eslint": "^8.45.0",
-    "eslint-plugin-vue": "^9.15.1",
+    "eslint": "^8.46.0",
+    "eslint-plugin-vue": "^9.16.1",
     "esno": "^0.17.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "leaflet": "^1.9.4",
     "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.26",
+    "postcss": "^8.4.27",
     "postcss-cli": "^10.1.0",
     "postcss-import": "^15.1.0",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
-    "vite": "^4.4.5",
-    "vitest": "^0.33.0",
+    "vite": "^4.4.8",
+    "vitest": "^0.34.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "^1.8.8"
   }
 }
