chore: remove generate attrs script

--- a/package.json
+++ b/package.json
@@ -49,9 +49,8 @@
     "build-styles": "postcss src/assets/css/normalize.css --base src/assets/css --dir dist -u \"postcss-import\" tailwindcss autoprefixer cssnano --no-map",
     "build-themes": "postcss src/assets/css/theme-*.css --base src/assets/css --dir dist -u \"postcss-import\" tailwindcss autoprefixer cssnano --no-map",
     "build-global-dts": "esno scripts/gen-global.ts",
-    "build-attrs-dts": "esno scripts/gen-attrs.ts",
     "build-meta": "esno scripts/gen-meta.ts",
-    "build-all": "run-s build build-styles build-themes build-attrs-dts build-global-dts build-meta",
+    "build-all": "run-s build build-styles build-themes build-global-dts build-meta",
     "playground": "vite playground",
     "build-playground": "vite build playground",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
