--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@leaflet-extensions/locatecontrol": "^0.0.2",
     "@rushstack/eslint-patch": "^1.3.3",
     "@types/jsdom": "^21.1.2",
     "@types/leaflet": "^1.9.4",
